# rxgnn-tcm-toxicity-predictor

./: README.md  pyproject.toml
configs/: default.yaml
rxgnn/: __init__.py  data.py  loss.py  model.py  utils.py
scripts/: download_data.py  predict.py  train.py
tests/: test_data.py  test_model.py
