[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rxgnn-tcm-tox"
version = "0.1.0"
description = "Reaction-aware GNN for TCM synergy toxicity prediction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["TCM", "GNN", "drug-safety", "cheminformatics", "toxicity"]
dependencies = [
    "torch>=2.1",
    "torch_geometric>=2.4",
    "rdkit-pypi>=2023.3",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "networkx>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=23", "ruff>=0.1", "ipykernel", "nbformat"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rxgnn*"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]